--- a/custom-styles.css
+++ b/custom-styles.css
@@ -9,7 +9,7 @@
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .banner {
     height: 75px;
-    background-color: #fc8600; /* Machine Learning Color is orange */
+    background-color: #302f2e; /* Machine Learning Color is orange */
     padding-top: 0px;
     padding-left: 0px;
     padding-right: 0px;
